# kira

./: .bazelignore  .bazelrc  .clang-tidy  .gitignore  .justfile  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  test
src/: BUILD.bazel  cli.cpp  cli.h  cli_test.cpp  codegen_stress_test.cpp  driver_stress_test.cpp  intrinsics.h  main.cpp  module_metadata.proto  semantic_stress_test.cpp  std_test.cpp  version.h
src/bytecode/: BUILD.bazel  chunk.cpp  chunk.h  chunk_test.cpp  opcodes.h  panic.cpp  panic.h  value.cpp  value.h  vm.cpp  vm.h  vm_test.cpp
src/bytecode_compiler/: BUILD.bazel  compile.cpp  compile.h  compile_test.cpp  register_alloc.cpp  register_alloc.h  register_alloc_test.cpp
src/comptime/: BUILD.bazel  eval.cpp  eval.h  eval_test.cpp  hygiene.cpp  hygiene.h  reflect.cpp  value.h
src/driver/: BUILD.bazel  aot.cpp  aot.h  cli.cpp  cli.h  defaults.h  driver.cpp  driver.h  interpret.cpp  interpret.h  lower.h  lowering_stage.cpp  lowering_stage.h  module_metadata.cpp  module_metadata.h  parse_stage.cpp  parse_stage.h  run_build_stage.cpp  run_build_stage.h  static_if_stage.cpp  static_if_stage.h
src/hir/: BUILD.bazel  captures.cpp  captures.h  captures_test.cpp  ids.h  link.cpp  link.h  link_test.cpp  live_across_yield.cpp  live_across_yield.h  live_across_yield_test.cpp  lower.cpp  lower.h  lower_test.cpp  nodes.h  nodes_test.cpp
src/k-parser/: BUILD.bazel  MODULE.bazel  ast.h  bazel-k-parser  diagnostic.h  lexer.h  parser.cpp  parser.h  parser_test.cpp  source_location.h  text_escape.cpp  token.h
src/llvm_codegen/: BUILD.bazel  aot.cpp  aot.h  aot_runtime.cpp  aot_test.cpp  codegen.cpp  codegen.h  codegen_test.cpp  jit_support.cpp  jit_support.h  runtime.cpp  runtime.h
src/parser/: BUILD.bazel  MODULE.bazel  ast.h  ast_clone.cpp  ast_clone.h  diagnostic.h  interp_string.cpp  interp_string.h  lexer.h  parser.cpp  parser.h  parser_test.cpp  source_location.h  text_escape.cpp  text_escape.h  token.h
src/runtime/: BUILD.bazel  arena.cpp  arena.h  arena_test.cpp  fmt.cpp  fmt.h  io.cpp  io.h  layout.cpp  layout.h  layout_test.cpp  platform.cpp  platform.h  platform_query.cpp  platform_query.h  string.cpp  string.h  string_ops.cpp  string_ops.h
src/semantic/: BUILD.bazel  analysis.cpp  analysis.h  analysis_test.cpp  binding_walk.cpp  binding_walk.h  check.cpp  check.h  check_test.cpp  ids.h  linear_poly.cpp  linear_poly.h  module_index.cpp  module_index.h  move_check.cpp  move_check.h  move_check_test.cpp  reason.cpp  reason.h  reason_test.cpp  resolution.cpp  resolution.h  resolution_test.cpp  scopes.cpp  scopes.h  session.cpp  session.h  symbols.cpp  symbols.h  types.cpp  types.h
src/std/: algo.kira  console.kira  deriving.kira  fmt.kira  io.kira  iter.kira  list.kira  option.kira  panic.kira  platform.kira  prelude.kira  result.kira  string.kira  traits.kira
src/std/fs/: path.kira
src/testdata/bytecode_compile/: array_fill.kira  array_out_of_bounds.kira  cast_int_to_float.kira  checked_add_overflow.kira  match_guard.kira  match_literal_wildcard.kira  match_or_pattern.kira  match_range_pattern.kira  recursive_factorial.kira  struct_field_access.kira  sum_type_unit_variant.kira  tuple_construction.kira  while_loop.kira
src/testdata/bytecode_test/: add.kira  and_or_short_circuit.kira  closure_capture.kira  fixed_array_indexing.kira  function_calls.kira  if_expression.kira  implicit_tail_expression.kira  let_else_pattern.kira  list_comprehension.kira  list_fill.kira  list_for_loop.kira  list_literal_indexing.kira  list_out_of_bounds.kira  match_constructor_pattern.kira  match_struct_pattern.kira  match_tuple_pattern.kira  string_literal.kira  sum_type_variant.kira  while_let_pattern.kira
src/testdata/codegen_stress/: 001_add_sub_mul.kira  002_integer_overflow_panics.kira  003_divide_by_zero_panics.kira  004_mod_and_div.kira  005_comparisons.kira  006_bitwise_ops.kira  007_shift_ops.kira  008_shift_overflow_panics.kira  009_wrapping_arithmetic.kira  010_saturating_arithmetic.kira  011_unary_neg_and_bitnot.kira  012_boolean_not_and_short_circuit.kira  013_if_expression_branches.kira  014_if_elif_else_statement.kira  015_while_loop_accumulate.kira  016_recursive_factorial.kira  017_mutual_recursion_even_odd.kira  018_function_calls_chain.kira  019_cast_int_widen_narrow.kira  020_cast_float_conversions.kira  021_char_and_bool_literals.kira  022_float_arithmetic.kira  023_unsigned_arithmetic.kira  024_nested_if_expression.kira  025_tuple_return_deep_equality.kira  026_fixed_array_return_deep_equality.kira  027_list_return_deep_equality.kira  028_string_return_deep_equality.kira  029_list_of_tuples_return_deep_equality.kira  030_if_let_chain.kira  031_if_let_try_from.kira  032_if_let_expression.kira  033_const_generic_monomorphization.kira  034_generic_monomorphization.kira  034_higher_kinded_trait_dispatch.kira  035_str_slice_element_index.kira  036_lambda_captures_local_not_global.kira  037_user_iterator_for_loop.kira  038_type_generic_free_function.kira  039_type_param_static_dispatch.kira  (+22 more)
src/testdata/codegen_test/: add.kira  and_or_short_circuit.kira  array_fill.kira  array_out_of_bounds.kira  cast_int_to_float.kira  checked_add_overflow.kira  checked_div_by_zero.kira  closure_capture.kira  closure_noncapture.kira  contract_diverging_tail.kira  contract_violation.kira  field_access_on_local.kira  fixed_array_indexing.kira  function_calls.kira  generator_precondition.kira  generator_precondition_holds.kira  if_expression.kira  implicit_tail_expression.kira  implicit_tail_match_and_if.kira  intrinsic_call.kira  intrinsic_result.kira  let_else_pattern.kira  list_comprehension.kira  list_fill.kira  list_for_loop.kira  list_literal_indexing.kira  list_out_of_bounds.kira  match_constructor_pattern.kira  match_guard.kira  match_literal_wildcard.kira  match_or_pattern.kira  match_range_pattern.kira  match_string_pattern.kira  match_struct_pattern.kira  match_tuple_pattern.kira  (+12 more)
src/testing/: BUILD.bazel  test_assert.h  test_data.h
src/utf8/: BUILD.bazel  utf8.cpp  utf8.h
src/util/: BUILD.bazel  path.cpp  path.h  path_test.cpp  str.cpp  str.h
(+490 files in other folders)
