module(
    name = "kira",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "argparse", version = "3.0.0")
bazel_dep(name = "k-parser", version = "0.1.0")
bazel_dep(name = "wolfd_bazel_compile_commands", version = "0.5.2")

local_path_override(
    module_name = "argparse",
    path = "third_party/argparse",
)

local_path_override(
    module_name = "k-parser",
    path = "src/k-parser",
)
