# Keep this version in sync with `k_version_string` in src/version.h — bzlmod
# requires the module version live here and can't read the C++ header.
module(
    name = "kira",
    version = "0.13.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "35.1")
bazel_dep(name = "rules_cc", version = "0.2.22")
bazel_dep(name = "wolfd_bazel_compile_commands", version = "0.5.2")

llvm = use_extension("//third_party/llvm:repo.bzl", "llvm_extension")
use_repo(llvm, "llvm")
