load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

filegroup(
    name = "parser_stress_corpus",
    srcs = glob(["testdata/parser_stress/*.kira"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "semantic_stress_corpus",
    srcs = glob(["testdata/semantic_stress/*.kira"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "codegen_stress_corpus",
    srcs = glob(["testdata/codegen_stress/*.kira"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "codegen_test_corpus",
    srcs = glob(["testdata/codegen_test/*.kira"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "semantic_analysis_test_files",
    srcs = glob(["testdata/semantic_analysis_test/**/*.kira"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "semantic_check_test_files",
    srcs = glob(["testdata/semantic_check_test/**/*.kira"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "semantic_resolution_test_files",
    srcs = glob(["testdata/semantic_resolution_test/**/*.kira"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "std_sources",
    srcs = glob(["std/*.kira"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "std_test_corpus",
    srcs = glob(["testdata/std_test/*.kira", "testdata/std_test/*.expected"]),
    visibility = ["//visibility:public"],
)

proto_library(
    name = "module_metadata_proto",
    srcs = ["module_metadata.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "module_metadata_cc_proto",
    deps = [":module_metadata_proto"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "intrinsics",
    hdrs = ["intrinsics.h"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "kira",
    srcs = ["main.cpp"],
    data = [
        "//src/llvm_codegen:aot_runtime",
        "//src/runtime",
    ],
    tags = ["no-sandbox"],
    deps = ["//src/driver:driver"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "cli_test",
    srcs = ["cli_test.cpp"],
    tags = ["no-sandbox"],
    data = [
        ":std_sources",
        "//src/llvm_codegen:aot_runtime",
        "//src/runtime:runtime",
    ],
    deps = [
        ":module_metadata_cc_proto",
        "//src/driver:driver",
    ],
)

cc_test(
    name = "driver_stress_test",
    size = "medium",
    srcs = ["driver_stress_test.cpp"],
    data = [":parser_stress_corpus"],
    tags = ["no-sandbox"],
    deps = ["//src/driver:driver"],
)

cc_test(
    name = "semantic_stress_test",
    size = "medium",
    srcs = ["semantic_stress_test.cpp"],
    data = [":semantic_stress_corpus"],
    tags = ["no-sandbox"],
    deps = ["//src/driver:driver"],
)

cc_test(
    name = "std_test",
    size = "medium",
    srcs = ["std_test.cpp"],
    data = [":std_test_corpus"],
    tags = ["no-sandbox"],
    deps = ["//src/driver:driver"],
)

cc_test(
    name = "codegen_stress_test",
    size = "medium",
    srcs = ["codegen_stress_test.cpp"],
    data = [":codegen_stress_corpus"],
    tags = ["no-sandbox"],
    deps = [
        "//src/bytecode:bytecode",
        "//src/bytecode:vm",
        "//src/bytecode_compiler:bytecode_compiler",
        "//src/hir:hir",
        "//src/parser:parser",
        "//src/llvm_codegen:codegen",
        "//src/llvm_codegen:jit_support",
        "//src/semantic:semantic",
    ],
)
