load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "bytecode",
    srcs = [
        "chunk.cpp",
        "value.cpp",
    ],
    hdrs = [
        "chunk.h",
        "opcodes.h",
        "value.h",
    ],
    deps = [
        "//src/semantic:semantic",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "chunk_test",
    srcs = ["chunk_test.cpp"],
    deps = [
        ":bytecode",
        "//src/semantic:semantic",
        "//src/testing",
    ],
)
