load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "bytecode",
    srcs = [
        "chunk.cpp",
        "panic.cpp",
        "value.cpp",
    ],
    hdrs = [
        "chunk.h",
        "opcodes.h",
        "panic.h",
        "value.h",
    ],
    deps = [
        "//src/semantic:semantic",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "vm",
    srcs = ["vm.cpp"],
    hdrs = ["vm.h"],
    deps = [
        ":bytecode",
        "//src:intrinsics",
        "//src/runtime",
        "//src/utf8",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "chunk_test",
    srcs = ["chunk_test.cpp"],
    deps = [
        ":bytecode",
        "//src/semantic:semantic",
        "//src/testing",
    ],
)

cc_test(
    name = "vm_test",
    srcs = ["vm_test.cpp"],
    deps = [
        ":bytecode",
        ":vm",
        "//src:intrinsics",
        "//src/testing",
    ],
)
