load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "bytecode_compiler",
    srcs = ["compile.cpp"],
    hdrs = ["compile.h"],
    deps = [
        "//src/bytecode:bytecode",
        "//src/hir:hir",
        "//src/parser:parser",
        "//src/runtime",
        "//src/semantic:semantic",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "compile_test",
    srcs = ["compile_test.cpp"],
    data = ["//src:bytecode_test_corpus"],
    tags = ["no-sandbox"],
    deps = [
        ":bytecode_compiler",
        "//src/bytecode:bytecode",
        "//src/bytecode:vm",
        "//src/hir:hir",
        "//src/parser:parser",
        "//src/semantic:semantic",
        "//src/testing",
    ],
)
