load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "bytecode_compiler",
    srcs = [
        "compile.cpp",
        "register_alloc.cpp",
    ],
    hdrs = [
        "compile.h",
        "register_alloc.h",
    ],
    deps = [
        "//src:intrinsics",
        "//src/bytecode:bytecode",
        "//src/hir:hir",
        "//src/parser:parser",
        "//src/runtime",
        "//src/semantic:semantic",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "register_alloc_test",
    srcs = ["register_alloc_test.cpp"],
    deps = [
        ":bytecode_compiler",
        "//src/testing",
    ],
)

cc_test(
    name = "compile_test",
    srcs = ["compile_test.cpp"],
    data = ["//src:codegen_test_corpus"],
    tags = ["no-sandbox"],
    deps = [
        ":bytecode_compiler",
        "//src/bytecode:bytecode",
        "//src/bytecode:vm",
        "//src/hir:hir",
        "//src/parser:parser",
        "//src/semantic:semantic",
        "//src/testing",
    ],
)
