load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "driver",
    srcs = [
        "aot.cpp",
        "cli.cpp",
        "driver.cpp",
        "interpret.cpp",
        "lower.cpp",
        "lowering_stage.cpp",
        "module_metadata.cpp",
        "parse_stage.cpp",
        "run_build_stage.cpp",
        "static_if_stage.cpp",
    ],
    hdrs = [
      "aot.h",
      "cli.h",
      "defaults.h",
      "driver.h",
      "interpret.h",
      "lower.h",
      "lowering_stage.h",
      "module_metadata.h",
      "parse_stage.h",
      "run_build_stage.h",
      "static_if_stage.h",
    ],
    deps = [
      "//src:module_metadata_cc_proto",
      "//src/bytecode:bytecode",
      "//src/bytecode:vm",
      "//src/bytecode_compiler:bytecode_compiler",
      "//src/comptime:comptime",
      "//src/hir:hir",
      "//src/llvm_codegen:aot",
      "//src/semantic:semantic",
      "//src/parser:parser",
      "//src/util:util",
      "//src:version",
    ],
    visibility = ["//visibility:public"],
)
