load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "hir",
    srcs = [
        "captures.cpp",
        "lower.cpp",
    ],
    hdrs = [
        "captures.h",
        "ids.h",
        "lower.h",
        "nodes.h",
    ],
    deps = [
        "//src/parser:parser",
        "//src/semantic:semantic",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "nodes_test",
    srcs = ["nodes_test.cpp"],
    deps = [
        ":hir",
        "//src/parser:parser",
        "//src/semantic:semantic",
        "//src/testing",
    ],
)

cc_test(
    name = "lower_test",
    srcs = ["lower_test.cpp"],
    deps = [
        ":hir",
        "//src/parser:parser",
        "//src/semantic:semantic",
        "//src/testing",
    ],
)

cc_test(
    name = "captures_test",
    srcs = ["captures_test.cpp"],
    deps = [
        ":hir",
        "//src/parser:parser",
        "//src/semantic:semantic",
        "//src/testing",
    ],
)
