load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "parser",
    srcs = [
        "parser.cpp",
        "text_escape.cpp",
    ],
    hdrs = [
        "ast.h",
        "diagnostic.h",
        "lexer.h",
        "parser.h",
        "source_location.h",
        "text_escape.h",
        "token.h",
    ],
    deps = [
        "//src/utf8",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "parser_test",
    srcs = ["parser_test.cpp"],
    deps = [
        ":parser",
        "//src/testing",
    ],
)
