load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "semantic",
    srcs = [
        "analysis.cpp",
        "binding_walk.cpp",
        "check.cpp",
        "module_index.cpp",
        "move_check.cpp",
        "resolution.cpp",
        "scopes.cpp",
        "session.cpp",
        "symbols.cpp",
        "types.cpp",
    ],
    hdrs = [
        "analysis.h",
        "binding_walk.h",
        "check.h",
        "ids.h",
        "module_index.h",
        "move_check.h",
        "resolution.h",
        "scopes.h",
        "session.h",
        "symbols.h",
        "types.h",
    ],
    deps = [
        "//src:intrinsics",
        "//src/comptime",
        "//src/parser:ast_clone",
        "//src/parser:parser",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "analysis_test",
    srcs = ["analysis_test.cpp"],
    data = [
        "//src:semantic_analysis_test_files",
    ],
    deps = [
        ":semantic",
        "//src/parser:parser",
        "//src/testing",
    ],
)

cc_test(
    name = "check_test",
    srcs = ["check_test.cpp"],
    data = [
        "//src:semantic_check_test_files",
        "//src:std_sources",
    ],
    deps = [
        ":semantic",
        "//src/parser:parser",
        "//src/testing",
    ],
)

cc_test(
    name = "resolution_test",
    srcs = ["resolution_test.cpp"],
    data = [
        "//src:semantic_resolution_test_files",
    ],
    deps = [
        ":semantic",
        "//src/parser:parser",
        "//src/testing",
    ],
)
