load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "util",
    srcs = [
      "path.cpp",
        "str.cpp",
    ],
    hdrs = [
      "path.h",
      "str.h",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "path_test",
    srcs = ["path_test.cpp"],
    deps = [
        ":util",
        "//src/testing",
    ],
)
